fixed layout on mobile

--- a/frontend/caldaia-frontend/src/styles.css
+++ b/frontend/caldaia-frontend/src/styles.css
@@ -10,6 +10,10 @@ html {
     font-weight: bold;
 }
 
+ul [role="presentation"] {
+  height: 4rem;
+}
+
 .layout-topbar {
     height: 55px;
     background-color: black;
@@ -82,3 +86,4 @@ html {
     margin-left: auto;
     margin-right: auto;
   }
+
